assets/css/style.css
/* ... */
#yl-main-slider-2:hover .owl-prev {
  opacity: 1;
  left: 30px;
  visibility: visible;
}

.slider-main-item-2 {
  padding: 250px 0px;
}
.slider-main-item-2 .slider-overlay {
  background-color: rgba(0, 0, 0, 0.7);
}
.slider-main-item-2 .slider-main-text {
  color: #fff;
  margin: 0 auto;
  max-width: 760px;
}
.slider-main-item-2 .slider-main-text span {
  font-size: 18px;
  font-weight: 700;
  padding-bottom: 30px;
  display: inline-block;
  text-transform: uppercase;
}
.slider-main-item-2 .slider-main-text h1 {
  font-size: 60px;
  font-weight: 700;
  padding-bottom: 70px;
  text-transform: capitalize;
}
.slider-main-item-2 .slider-main-text a {
  height: 60px;
  width: 180px;
  line-height: 60px;
  border-radius: 5px;
  font-weight: 700;
  display: inline-block;
  background-color: #ff5520;
}

.banner-water-mark {
  left: 0;
  bottom: -40px;
  opacity: 0.05;
  z-index: -1;
  line-height: 1;
  color: #00003d;
  font-weight: 700;
  font-size: 265px;
  position: absolute;
  font-family: "Fira Sans";
}

.yl-banner-section {
  background-color: #f7f7f7;
  padding-bottom: 132px;
  padding-top: 0;
}
.yl-banner-section .banner-dot-square {
  z-index: 1;
}
.yl-banner-section .dot-square1 {
  width: 7px;
  height: 7px;
  top: 200px;
  left: 150px;
  background-color: #00a4ff;
  box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.25);
  animation: animationFramesOne 12s infinite alternate;
}
.yl-banner-section .dot-square2 {
  top: 150px;
  left: 25%;
  width: 10px;
  height: 10px;
  background-color: #000;
  box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.25);
  animation: animationFramesTwo 18s infinite alternate;
}
.yl-banner-section .dot-square3 {
  bottom: 150px;
  left: 150px;
  width: 10px;
  height: 10px;
  background-color: #ff5520;
  box-shadow: 0px 6px 13px 0px rgba(255, 85, 32, 0.25);
  animation: animationFramesOne 12s infinite alternate;
}
.yl-banner-section .dot-square4 {
  width: 10px;
  height: 10px;
  right: 50%;
  bottom: 200px;
  background-color: #0000fe;
  box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.25);
  animation: animationFramesTwo 18s infinite alternate;
}

.yl-banner-content {
  background-color: #f7f7f7;
}
.yl-banner-content .yl-banner-img {
  top: 90px;
  right: 0px;
  position: absolute;
}
.yl-banner-content .b-deco-shape {
  bottom: -74px;
}

.yl-banner-text {
  z-index: 1;
  max-width: 690px;
  overflow: hidden;
  padding-top: 150px;
  padding-bottom: 50px;
}
.yl-banner-text .yl-banner-tag {
  padding-right: 30px;
  border-radius: 40px;
  display: inline-block;
  margin-bottom: 45px;
  background-color: #efeff0;
}
.yl-banner-text .yl-banner-tag span {
  color: #fff;
  font-weight: 500;
  padding: 12px 30px;
  margin-right: 10px;
  border-radius: 40px;
  display: inline-block;
  background-color: #0000fe;
}
.yl-banner-text .yl-banner-tag p {
  color: #000000;
  font-size: 16px;
  font-weight: 500;
  padding-bottom: 0;
  display: inline-block;
}
.yl-banner-text h1 {
  color: #000;
  font-size: 58px;
  font-weight: 700;
  line-height: 1.2;
  padding-bottom: 35px;
}
.yl-banner-text h1 span {
  color: #0000fe;
}
.yl-banner-text p {
  color: #4f4f4f;
  font-size: 20px;
  line-height: 1.6;
  padding-bottom: 40px;
}
.yl-banner-text .yl-banner-btn,
.yl-about-btn {
  margin-top: 30px;
  float: left;
  margin-right: 35px;
}
.yl-banner-text .yl-banner-btn a,
.yl-about-btn a {
  color: #fff;
  width: 160px;
  height: 55px;
  display: block;
  overflow: hidden;
  font-weight: 700;
  line-height: 55px;
  border-radius: 40px;
  background-color: #ff5520;
}
.yl-banner-text .yl-banner-btn a i {
  margin-left: 5px;
}
.yl-banner-text .yl-banner-play {
  float: left;
  width: 50px;
  height: 50px;
  margin-top: 5px;
  line-height: 50px;
  border-radius: 100%;
  transition: 0.3s all ease-in-out;
  background-color: #0000fe;
}
.yl-banner-text .yl-banner-play a {
  color: #fff;
  width: 100%;
  display: block;
}
.yl-banner-text .yl-banner-play:hover {
  background-color: #e3002a;
}
.yl-banner-text .yl-banner-play .video_btn_border {
  border: 2px solid rgba(0, 0, 0, 0.15);
}

.banner-search-select {
  top: -175px;
  z-index: 1;
  position: relative;
  margin-bottom: -175px;
}
.banner-search-select .banner-search-shape1 {
  top: -70px;
  left: -70px;
  z-index: -1;
}
.banner-search-select .banner-search-shape2 {
  bottom: -70px;
  right: -70px;
  z-index: -1;
}
.banner-search-select .banner-search-form {
  background-color: #fff;
  display: inline-block;
  border-radius: 10px;
  padding: 20px 20px 12px;
  box-shadow: 0px 6px 21px 0px rgba(0, 0, 0, 0.05);
}
.banner-search-select .yl-select-option-wrap {
  float: left;
  margin-top: 5px;
}
.banner-search-select .banner-select-option {
  width: 165px;
  display: inline-block;
}
.banner-search-select .banner-select-option .nice-select {
  color: #000;
  border: none;
  height: auto;
  font-size: 18px;
  font-weight: 700;
  line-height: auto;
  font-family: "Fira Sans";
}
.banner-search-select .banner-select-option .nice-select:after {
  top: 0px;
  right: 20px;
  height: auto;
  border: none;
  margin-top: 0;
  font-size: 12px;
  content: "";
  font-weight: 900;
  transform: rotate(0);
  font-family: "Font Awesome 5 Free";
}
.banner-search-select button {
  color: #fff;
  height: 45px;
  width: 160px;
  border: none;
  font-weight: 700;
  border-radius: 5px;
  overflow: hidden;
  background-color: #0000fe;
}
.banner-search-select button:after {
  background-color: #ff5520;
}
.banner-search-select button i {
  margin-right: 5px;
}

.select-apply-btn {
  margin-top: 20px;
}
.select-apply-btn p {
  color: #000;
  font-size: 15px;
}
.select-apply-btn p a {
  font-weight: 700;
  margin-left: 8px;
  color: #0000fe;
  text-decoration: underline;
}
@keyframes animateBubble {
  0% {
    margin-top: 20%;
  }
  100% {
    margin-top: -30%;
  }
}
@keyframes sideWays {
  0% {
    margin-left: 0;
  }
  100% {
    margin-left: 25px;
  }
}
.slider-main-item-3 {
  padding: 150px 0px 250px;
}
/* ... */

